initial phase space commit
fitPhaseSpace.m:
- simulate and fit over whole parameter space
- initially written for fitting "ticsPartOffTwoStateBleachNoNormFn.m", but can be generalized

analyzePhaseSpace.m:
- code for analyzing output of "fitPhaseSpace.m"

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.png
 
 issues/
+atp-release/local/logfiles
 
 # matlab/mathematica associations
 *.fig
@@ -12,4 +13,12 @@ issues/
 *.nb
 *.mat
 
+# user-defined
 *.out
+
+# dropbox associations
+*.ini
+.dropbox
+
+# latex associations
+*.gz
